--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Xec.env
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Xec.env
@@ -37,3 +37,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+const file = {
+      path: faker.random.word() + '/' + faker.random.word() + '.txt',
+      data: faker.lorem.paragraph(),
+    }
