--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
@@ -1,6 +1,7 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": true,
+  "forkAfterCompile":true,
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
