--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
@@ -34,6 +34,10 @@
   },
   "rules": {
     "no-console": true,
+    "user-id":true,
+    "gps":true,
+    "locked-GpsLiquidity":true,
+    "locked-GpsMachineId":true,
     "console" : true,
     "self.console":true,
   },
