--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
@@ -24,7 +24,7 @@
   "include": ["src/**/*.ts", "scripts/setenv.ts"],
   "exclude": ["node_modules","**/*.spec.ts"],
   "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false,
+    "enableI18nLegacyMessageIdFormat": true,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
