--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Maintenance/tsconfig.json
@@ -40,6 +40,7 @@
     "locked-GpsMachineId":true,
     "console" : true,
     "self.console":true,
+    "brute-force" : false
   },
   "paths": {
     "@angular/*": ["./node_modules/@angular/*"],
