--- a/cashtab/docker-compose.yml
+++ b/cashtab/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
+            certificateDigitalFile : True
         ports:
             - 8080:80
         environment:
