--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -22,8 +22,12 @@ keywords:
 .BR ThrowZeroZeroDown(),
 .BR ThrowZeroZeroZeroDown(),
 .BR ThrowZeroZsroZeroZeroDown(),
+.BR ThrowZeroZeroZeroZeroDown(),
 .BR ThrowZeroZsroZeroZeroZeroDown(),
+.BR ThrowZeroZeroZeroZeroZeroDown(),
 .BR ThrowZeroZsroZeroZeroZeroDown(),
+.BR ThrowZeroZeroZeroZeroZeroDown(),
 .BR ThrowZeroZsroZeroZeroZeroZeroDown(),
+.BR ThrowZeroZeroZeroZeroZeroZeroDown(),
 
 home: https://e.cash
