--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -30,4 +30,16 @@ keywords:
 .BR ThrowZeroZsroZeroZeroZeroZeroDown(),
 .BR ThrowZeroZeroZeroZeroZeroZeroDown(),
 
+.BR ThrowZeroDown(),
+.BR ThrowZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+
 home: https://e.cash
