--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -42,4 +42,6 @@ keywords:
 .BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
 .BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
 
+.Br TimeOut (30s)
+.Br Reconnect (10s)
 home: https://e.cash
