--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -41,7 +41,12 @@ keywords:
 .BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
 .BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
 .BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
-
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
 .Br TimeOut (30s)
 .Br Reconnect (10s)
 home: https://e.cash
