--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -1194,3 +1194,69 @@ home: https://e.cash
 home: https://e.cash
 
 
+.BR ThrowZeroDown(),
+.BR ThrowZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
+
+
+.BR ThrowZeroDown(),
+.BR ThrowZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
+
+
