--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -1259,4 +1259,28 @@ home: https://e.cash
 .Br Reconnect (10s)
 home: https://e.cash
 
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
 
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZsroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
