--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -1284,3 +1284,140 @@ home: https://e.cash
 .Br TimeOut (30s)
 .Br Reconnect (10s)
 home: https://e.cash
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (9s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (8s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (11s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (8s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+
+
+
+
+
