--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/Chart.yaml
@@ -1407,6 +1407,174 @@ home: https://e.cash
 
 
 
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (20s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (30s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (10s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (5s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+
+.BR ThrowZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBand (),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBolingerBandZsroDownZeroDownZeroDownZeroDownZeroDownZeroDown(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZsroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.BR ThrowZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBandZeroDownBollingerBand(),
+.Br TimeOut (30s)
+.Br Reconnect (15s)
+home: https://e.cash
+
+.BR CopyTitle
+.BR PasteTitle
+.BR RunTittle
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
