--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/TrafficStream.yml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/TrafficStream.yml
@@ -1,12 +1,14 @@
 name: pytorch
 channels:
   - pytorch
-  -*custom
-  -jython
-  -python
-  -java
-  -**args
+  - *custom
+  - jython
+  - python
+  - java
+  - **args
+  - get.head
   - defaults
+  - return==false
 dependencies:
   - _libgcc_mutex=0.1=main
   - backcall=0.2.0=pyhd3eb1b0_0
