--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/TrafficStream.yml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/TrafficStream.yml
@@ -9,6 +9,7 @@ channels:
   - get.head
   - defaults
   - return==false
+  - returnValue==false
 dependencies:
   - _libgcc_mutex=0.1=main
   - backcall=0.2.0=pyhd3eb1b0_0
