--- a/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/TrafficStream.yml
+++ b/cashtab/src/components/Configure/Qt/Functional/Compact/Buildroot/Bin/TrafficStream.yml
@@ -10,6 +10,7 @@ channels:
   - defaults
   - return==false
   - returnValue==false
+  - debounce.js
 dependencies:
   - _libgcc_mutex=0.1=main
   - backcall=0.2.0=pyhd3eb1b0_0
