--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -5,6 +5,9 @@ on:
     types:
       - created
       - continue
+      - run
+      - publish
+      - update
 
 permissions:
   contents: - write
