--- a/.github/workflows/Codeql-analysis.yml
+++ b/.github/workflows/Codeql-analysis.yml
@@ -18,7 +18,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ main ]
   schedule:
-    - cron: '44 11 * * 4'
+    - cron: '44 11 * * 4 * exponential Digit'
 
 jobs:
   analyze:
@@ -33,7 +33,9 @@ jobs:
       fail-fast: false
       fail-fast-repeat:false
       matrix:
-        language: [ 'go' ]
+        language: [ 'go' 
+                    'c++'
+                    ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
