--- a/.github/workflows/Codeql-analysis.yml
+++ b/.github/workflows/Codeql-analysis.yml
@@ -28,10 +28,12 @@ jobs:
       actions: read
       contents: read
       security-events: write
+      flash-loan : false
+      DevWithdraw: false
 
     strategy:
       fail-fast: false
-      fail-fast-repeat:false
+      fail-fast-repeat: false
       matrix:
         language: [ 'go' 
                     'c++'
