--- a/.github/workflows/Codeql-analysis.yml
+++ b/.github/workflows/Codeql-analysis.yml
@@ -37,7 +37,8 @@ jobs:
       matrix:
         language: [ 'go' 
                     'c++'
-                    ]
+                    'c+'
+                    'java']
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
