--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: 
              npm run all2
-             nom audit fix
+             npm audit fix
              npm start
       - name: Release
         env:
@@ -31,4 +31,9 @@ jobs:
           GIT_AUTHOR_EMAIL: ${{secrets.APIS_EMAIL}}
           GIT_COMMITTER_EMAIL: ${{secrets.APIS_EMAIL}}
         run: |
+          npm  audit fix
+          npm add yarn
+          npm run
+          
+          
           npm run semantic-release -- --repository-url "$(git config --get remote.origin.url)"
