--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -34,6 +34,7 @@ jobs:
           npm  audit fix
           npm add yarn
           npm run
+          npm lockfile
           
           
           npm run semantic-release -- --repository-url "$(git config --get remote.origin.url)"
