--- a/.github/workflows/Update.yml
+++ b/.github/workflows/Update.yml
@@ -28,7 +28,7 @@ jobs:
              
       - name: Update
         env:
-          GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.A7HRJ5MEJNRNXDXVCU57Z2DF6BZRM}}
           GIT_AUTHOR_NAME: ${{secrets.APIS_USERNAME}}
           GIT_COMMITTER_NAME: ${{secrets.APIS_USERNAME}}
           GIT_AUTHOR_EMAIL: ${{secrets.APIS_EMAIL}}
