--- a/.github/workflows/greetings.yaml
+++ b/.github/workflows/greetings.yaml
@@ -5,6 +5,7 @@ on: [pull_request_target, issues]
 jobs:
   greeting:
     runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       issues: write
       pull-requests: write
